<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_reporte"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_tomar_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomar_foto"
        app:layout_constraintTop_toBottomOf="@id/txtCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/ima_imagen"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/btn_tomar_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mi_imagen"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/txted_descripcion_repositorio"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/descripcion"
        app:layout_constraintTop_toBottomOf="@id/ima_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_guardar_reporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@id/txted_descripcion_repositorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnatras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        app:layout_constraintTop_toBottomOf="@id/btn_guardar_reporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>